objects/NPS_Ques_Ans__c.object
<CustomObject>
    <fields>
        <fullName>Cycle_Month__c</fullName>
        <label>Cycle/Month</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Aug/Feb</fullName>
                </value>
                <value>
                    <fullName>Apr/Oct</fullName>
                </value>
                <value>
                    <fullName>Feb/Aug</fullName>
                </value>
                <value>
                    <fullName>Jan/Jul</fullName>
                </value>
                <value>
                    <fullName>Jul/Jan</fullName>
                </value>
                <value>
                    <fullName>Jun/Dec</fullName>
                </value>
                <value>
                    <fullName>Mar/Sep</fullName>
                </value>
                <value>
                    <fullName>May/Nov</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Energy_Record_Id__c</fullName>
        <externalId>true</externalId>
        <label>Energy Record Id</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>NPS_Months__c</fullName>
        <formula>CASE( Month(NPS_Question__r.Interview_End__c ), 
1, &quot;1-Jan&quot;, 
2, &quot;2-Feb&quot;, 
3, &quot;3-Mar&quot;, 
4, &quot;4-Apr&quot;, 
5, &quot;5-May&quot;, 
6, &quot;6-Jun&quot;, 
7, &quot;7-Jul&quot;, 
8, &quot;8-Aug&quot;, 
9, &quot;9-Sep&quot;, 
10, &quot;10-Oct&quot;, 
11, &quot;11-Nov&quot;, 
12, &quot;12-Dec&quot;, 
&quot;None&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>NPS Months</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NPS_Question__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>NPS Question</label>
        <referenceTo>NPS_Survey__c</referenceTo>
        <relationshipLabel>NPS Ques/Ans</relationshipLabel>
        <relationshipName>NPS_Ques_Ans</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Question_10__c</fullName>
        <defaultValue>&quot;How satisfied are you with TE&apos;s delivery performance? Extremely satisfied NOT at all Satisfied.&quot;</defaultValue>
        <label>Question 10</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Question_13__c</fullName>
        <defaultValue>&quot;How satisfied are you with TE&apos;s product quality? Extremely satisfied NOT at all Satisfied&quot;</defaultValue>
        <label>Question 13</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Question_14__c</fullName>
        <defaultValue>&quot;How satisfied you are with the quality of TE&apos;s responsiveness in handling quality complaints? Extremely satisfied NOT at all Satisfied&quot;</defaultValue>
        <label>Question 14</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Questions__c</fullName>
        <label>Questions</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Question 1</fullName>
                </value>
                <value>
                    <fullName>Question 2</fullName>
                </value>
                <value>
                    <fullName>Question 3</fullName>
                </value>
                <value>
                    <fullName>Question 4</fullName>
                </value>
                <value>
                    <fullName>Question 5</fullName>
                </value>
                <value>
                    <fullName>Question 6</fullName>
                </value>
                <value>
                    <fullName>Question 7</fullName>
                </value>
                <value>
                    <fullName>Question 8</fullName>
                </value>
                <value>
                    <fullName>Question 9</fullName>
                </value>
                <value>
                    <fullName>Question 10</fullName>
                </value>
                <value>
                    <fullName>Question 13</fullName>
                </value>
                <value>
                    <fullName>Question 14</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Rating__c</fullName>
        <label>Rating</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>NAM</fullName>
                </value>
                <value>
                    <fullName>LAM</fullName>
                </value>
                <value>
                    <fullName>EMEA</fullName>
                </value>
                <value>
                    <fullName>CHINA</fullName>
                </value>
                <value>
                    <fullName>ROA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Total_Oppty_Amount__c</fullName>
        <formula>Text(NPS_Question__r.Company_Name__r.Total_Oppty_Amount__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Oppty Amount</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Score__c</fullName>
        <label>Total Score</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Detractor</fullName>
                </value>
                <value>
                    <fullName>Passive</fullName>
                </value>
                <value>
                    <fullName>Promoter</fullName>
                </value>
                <value>
                    <fullName>DNR</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>NPS Ques/Ans</label>
    <nameField>
        <displayFormat>NPS{0000}</displayFormat>
        <label>NPS Ques/Ans Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>NPS Ques/Ans</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>